tests/NormalTests/paczka1/fuzzy1/66191640.err
Error in line 1: ZRUG2VH S572 92,8
Error in line 2: ZRUG2VH A361 42,0
Error in line 7: ZRUG2VH S949 17,3
Error in line 16: UFbNTx S572 77,5
Error in line 19: UFbNTx S949 98,9
Error in line 17: ZRUG2VH A101 45,6
Error in line 32: ZRUG2VH S572 91,7
